--- a/index.html
+++ b/index.html
@@ -1,7 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <title>Team Crisp</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+	<div class="container">
+	    <div class="row">
+	        <div class="col-xs-6">
+	        	<h1>Team Crisp CSE 170 Webpage</h1>
+	    		<p>This is some text.</p> 
+	    	</div>
+	        <div class="col-xs-6">col-xs-6</div>
+	    </div>
+	</div>
+	
+	  
+	
+
 </body>
 </html>
