--- a/index.html
+++ b/index.html
@@ -9,14 +9,36 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
+	<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+	  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+	    <span class="navbar-toggler-icon"></span>
+	  </button>
+	  <a class="navbar-brand" href="#">Navbar</a>
 
+	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+	    <ul class="navbar-nav mr-auto">
+	      <li class="nav-item active">
+	        <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link" href="#">Today</a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link" href="#">Account</a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link disabled" href="#">Disabled</a>
+	      </li>
+	    </ul>
+	  </div>
+	</nav>
 	<div class="container">
 	    <div class="row">
 	        <div class="col-xs-6">
 	        	<h1>Team Crisp CSE 170 Webpage</h1>
 	    		<p>This is some text.</p> 
 	    	</div>
-	        <div class="col-xs-6">col-xs-6</div>
+	        
 	    </div>
 	</div>
 	
