--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<div class="container">
 	    <div class="row">
 	        <div class="col-xs-6">
-	        	<h1>Team Crisp CSE 170 Webpage</h1>
+	        	<h1>Team Crisp Testing Site</h1>
 	    		<p>This is some text.</p> 
 	    	</div>
 	    </div>
