--- a/index.html
+++ b/index.html
@@ -9,43 +9,36 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav">
-    <span class="navbar-toggler-icon">C</span>
-  </button>
-  <a class="navbar-brand" href="#">Navbar</a>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
+
+<!-- credit: //www.w3schools.com/bootstrap/bootstrap_navbar.asp --> 
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Workout App</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Home</a></li>
+      <li><a href="#">Account Settings</a></li>
+      <li><a href="#">Log Out</a></li>
+      <!--li><a href="#">Page 3</a></li-->
     </ul>
   </div>
 </nav>
-	<div class="container">
+<div class="container">
 	    <div class="row">
 	        <div class="col-xs-6">
-	        	<h1>Team Crisp Testing Site</h1>
+	        	<h1>HOME</h1>
 	    		<p>This is some text.</p> 
 	    	</div>
 	    </div>
 	</div>
 	<div class="jumbotron">
-  <h1 class="display-3">Hello, world!</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+  <h1 class="display-3">Upcoming Workouts</h1>
+  <p class="lead">need to insert calendar here...</p>
   <hr class="my-4">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+  <!--p>It uses utility classes for typography and spacing to space content out within the larger container.</p-->
   <p class="lead">
-    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+    <a class="btn btn-primary btn-lg" href="#" role="button">Next Week</a>
   </p>
 </div>
 	
