--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!--Authors: Connor Schultz, Gauri Iyer, Andy Zhang
+    Class: CSE 170, Fall 2017
+    Project: Workout app to assist the aging/elderly with maintaining consistent schedule -->
+
 <html lang="en">
 <head>
   <title>Team Crisp</title>
@@ -10,40 +14,45 @@
 </head>
 <body>
 
-<!-- credit: //www.w3schools.com/bootstrap/bootstrap_navbar.asp --> 
+<!--NAVIGATION BAR
+    help & credit: //www.w3schools.com/bootstrap/bootstrap_navbar.asp 
+    https://stackoverflow.com/questions/19733447/bootstrap-navbar-with-left-center-and-right-aligned-items--> 
 <nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">Workout App</a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Account Settings</a></li>
-      <li><a href="#">Log Out</a></li>
-      <!--li><a href="#">Page 3</a></li-->
+  <div class="navbar-header">
+    <!--a class="navbar-brand" href="#">Workout App</a-->
+  </div>
+  <div class="navbar-collapse collapse">
+    <ul class="nav navbar-nav navbar-left">
+      <!--li><a href="#home">Home</a></li>
+      <li><a href="#other">Other</a></li-->
+      <li><a href="#accountsettings">Account Settings</a></li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="#logout">Log Out</a></li>
     </ul>
   </div>
 </nav>
-<div class="container">
-	    <div class="row">
-	        <div class="col-xs-6">
-	        	<h1>HOME</h1>
-	    		<p>This is some text.</p> 
-	    	</div>
-	    </div>
-	</div>
-	<div class="jumbotron">
-  <h1 class="display-3">Upcoming Workouts</h1>
-  <p class="lead">need to insert calendar here...</p>
-  <hr class="my-4">
-  <!--p>It uses utility classes for typography and spacing to space content out within the larger container.</p-->
+
+<!-- HOME PAGE BANNER -->
+<div class="jumbotron text-center">
+  <h1 class="display-3">Home</h1>
   <p class="lead">
-    <a class="btn btn-primary btn-lg" href="#" role="button">Next Week</a>
+    <a class="btn btn-success btn-lg" href="#" role="button">Start Today's Workout</a>
   </p>
 </div>
-	
-	  
-	
+
+<!-- UPCOMING WORKOUTS CALENDAR -->
+<div class="container">
+  <hr class="my-4">
+  <div class="row">
+    <div class="col-xs-6">
+      <h1>Upcoming Workokuts...</h1>
+      <p>This is some text.</p> 
+    </div>
+  </div>
+</div>
+
+
 
 </body>
 </html>
