Fixed login and sign up links

--- a/welcome.html
+++ b/welcome.html
@@ -62,11 +62,11 @@
             </div>
 
             <div class="form-group ">
-              <button type="button" class="btn btn-primary btn-lg btn-block login-button"  onclick="location.href = ''">Sign Up</button>
+              <button type="button" class="btn btn-primary btn-lg btn-block login-button"  onclick="location.href = '../'">Sign Up</button>
             </div>
             <label>Already have an account?</label>
             <div class="login-register">
-                    <a href="index.php">Login</a>
+                    <a href="/Login">Login</a>
                 </div>
           </form>
         </div>
