--- a/welcome.html
+++ b/welcome.html
@@ -62,7 +62,7 @@
             </div>
             <label>Already have an account?</label>
             <div>
-                    <a href="index.php">Login</a>
+                    <a href="./login">Login</a>
             </div>
           </form>
         </div>
