--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     Class: CSE 170, Fall 2017
     Project: Workout app to assist the aging/elderly with maintaining consistent schedule -->
 
+<!--HEAD-->
 <html lang="en">
 <head>
   <title>Team Crisp</title>
@@ -12,11 +13,14 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
+
 <body>
 
 <!--NAVIGATION BAR
-    help & credit: //www.w3schools.com/bootstrap/bootstrap_navbar.asp 
-    https://stackoverflow.com/questions/19733447/bootstrap-navbar-with-left-center-and-right-aligned-items--> 
+    sources of help: 
+      www.w3schools.com/bootstrap/bootstrap_navbar.asp 
+      https://stackoverflow.com/questions/19733447/bootstrap-navbar-with-left-center-and-right-aligned-items
+--> 
 <nav class="navbar navbar-inverse">
   <div class="navbar-header">
     <!--a class="navbar-brand" href="#">Workout App</a-->
@@ -33,6 +37,7 @@
   </div>
 </nav>
 
+
 <!-- HOME PAGE BANNER -->
 <div class="jumbotron text-center">
   <h1 class="display-3">Home</h1>
@@ -41,16 +46,52 @@
   </p>
 </div>
 
-<!-- UPCOMING WORKOUTS CALENDAR -->
+
+<!-- UPCOMING WORKOUTS HEADER-->
 <div class="container">
-  <hr class="my-4">
-  <div class="row">
-    <div class="col-xs-6">
-      <h1>Upcoming Workokuts...</h1>
-      <p>This is some text.</p> 
-    </div>
-  </div>
+  <h1 class="text-center">Your Weekly Workout Plan</h1>
+  <!-- IF WE WANT DESCRIPTION? 
+  <p class="text-ceneter">This is your weekly plan.</p> --> 
 </div>
+
+
+<!-- CALENDAR
+     sources of help: 
+        https://v4-alpha.getbootstrap.com/content/tables/
+-->
+<table class="table" align="center">
+  <thead class="thead-default">
+    <tr>
+      <th>Sunday</th>
+      <th>Monday</th>
+      <th>Tuesday</th>
+      <th>Wednesday</th>
+      <th>Thursday</th>
+      <th>Friday</th>
+      <th>Saturday</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Yoga</td>
+      <td>Walking</td>
+      <td>Yoga</td>
+      <td>Walking</td>
+      <td>Yoga</td>
+      <td>Walking</td>
+      <td>No Workout Today!</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Squats</td>
+      <td></td>
+      <td></td>
+      <td>Squats</td>
+      <td></td>
+      <td></td>
+    </tr>
+  </tbody>
+</table>
 
 
 
