--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <ul class="nav navbar-nav navbar-left">
       <!--li><a href="#home">Home</a></li>
       <li><a href="#other">Other</a></li-->
-      <li><a href="#accountsettings">Account Settings</a></li>
+      <li><a href="settings.html">Account Settings</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="#logout">Log Out</a></li>
+      <li><a href="login.html">Log Out</a></li>
     </ul>
   </div>
 </nav>
