Fix dead link to signup.html in login.html

--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
             </div>
             <label>Don't have an account yet?</label>
             <div>
-              <a href="/signup">Sign Up</a>
+              <a href="signup.html">Sign Up</a>
             </div>
             
           </form>
