--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <div class="jumbotron text-center">
   <h1 class="display-3">Home</h1>
   <p class="lead">
-    <a class="btn btn-success btn-lg" href="#" role="button">Start Today's Workout</a>
+    <a class="btn btn-success btn-lg" href="./work.html" role="button">Start Today's Workout</a>
   </p>
 </div>
 
