add finish and info page

--- a/work.html
+++ b/work.html
@@ -49,7 +49,7 @@
   <div class="row">
     
     <div class="col-sm-3">
-        <a href="#" target="_blank">
+        <a href="./info.html">
           <img src="./img/walk.jpg" class="img-rounded" alt="Lights" style="width:75%">
           <div class="caption">
             <p>Info</p>
@@ -79,7 +79,7 @@
   <div class="row">
     
     <div class="col-sm-3">
-        <a href="#" target="_blank">
+        <a href="./info.html">
           <img src="./img/walk.jpg" class="img-rounded" alt="Lights" style="width:75%">
           <div class="caption">
             <p>Info</p>
@@ -107,7 +107,7 @@
 <div class="container">             
   <ul class="pager">
     <li class="previous"><a href="./index.html">Previous</a></li>
-    <li class="next"><a href="./index.html">Next</a></li>
+    <li class="next"><a href="./finish.html">Next</a></li>
   </ul>
 </div>
 
