--- a/signup.html
+++ b/signup.html
@@ -27,6 +27,12 @@
                   <input type="text" class="form-control" name="name" id="name"  placeholder="Enter your Name"></input>
                 </div>
             </div>
+            <div class="form-group">
+              <label for="age">Age</label>
+                <div class="input-group">
+                  <input type="text" class="form-control" name="password" id="age"  placeholder="Age"/>
+                </div>     
+            </div>
 
             <div class="form-group">
               <label for="email" >Your Email</label>
@@ -41,6 +47,7 @@
                   <input type="password" class="form-control" name="password" id="password"  placeholder="Enter your Password"/>
                 </div>     
             </div>
+            
             <div>
             <h3>Modifications</h3>
               <label> Select all that Apply:</label>
