--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
               <label for="email" >Your Email</label>
               
                 <div class="input-group">
-                  <input type="text" class="form-control" name="email" id="email"  placeholder="Enter your Email"/>
+                  <input type="text" class="form-control" name="email" id="email"  placeholder="Enter your Email" required/>
                 </div>
             </div>
 
