made sign up form get since github pages doens't allow post

--- a/signup.html
+++ b/signup.html
@@ -19,7 +19,7 @@
           </div>
         </div> 
         <div>
-          <form method="post" action="/login">
+          <form method="get" action="/login">
             
             <div class="form-group">
               <label for="name">Your Name</label>
