validatinng age is a number

--- a/signup.html
+++ b/signup.html
@@ -30,7 +30,7 @@
             <div class="form-group">
               <label for="age">Age</label>
                 <div class="input-group">
-                  <input type="text" class="form-control" name="password" id="age"  placeholder="Age"  required/>
+                  <input type="text" class="form-control" name="password" id="age"  placeholder="Age" required pattern="[0-117]"/>
                 </div>     
             </div>
 
