Improved form validation

--- a/signup.html
+++ b/signup.html
@@ -22,7 +22,7 @@
           <form method="get" action="/login">
             
             <div class="form-group">
-              <label for="name">Your Name</label>
+              <label for="name">Name</label>
                 <div class="input-group">
                   <input type="text" class="form-control" name="name" id="name"  placeholder="Enter your Name" required></input>
                 </div>
@@ -30,12 +30,12 @@
             <div class="form-group">
               <label for="age">Age</label>
                 <div class="input-group">
-                  <input type="text" class="form-control" name="password" id="age"  placeholder="Age" required pattern="[0-117]"/>
+                  <input type="number" class="form-control" name="password" id="age"  placeholder="Enter your Age" required/>
                 </div>     
             </div>
 
             <div class="form-group">
-              <label for="email" >Your Email</label>
+              <label for="email" >Email</label>
                 <div class="input-group">
                   <input type="text" class="form-control" name="email" id="email"  placeholder="Enter your Email" required/>
                 </div>              
@@ -44,7 +44,7 @@
             <div class="form-group">
               <label for="password">Password</label>
                 <div class="input-group">
-                  <input type="password" class="form-control" name="password" id="password"  placeholder="Enter your Password" required/>
+                  <input type="password" class="form-control" name="password" id="password"  placeholder="Create a Password" required/>
                 </div>     
             </div>
             
