--- a/login.html
+++ b/login.html
@@ -23,10 +23,10 @@
            
 
             <div class="form-group">
-              <label for="email" >Your Email</label>
+              <label for="email" >Email</label>
               
                 <div class="input-group">
-                  <input type="text" class="form-control" name="email" id="email"  placeholder="Enter your Email" required/>
+                  <input type="text" class="form-control" name="email" id="email"  placeholder="Enter your Email"/>
                 </div>
             </div>
 
