improved form validation

--- a/signup.html
+++ b/signup.html
@@ -19,7 +19,7 @@
           </div>
         </div> 
         <div>
-          <form method="get" action="/login">
+          <form method="get" action="/">
             
             <div class="form-group">
               <label for="name">Name</label>
@@ -37,7 +37,7 @@
             <div class="form-group">
               <label for="email" >Email</label>
                 <div class="input-group">
-                  <input type="text" class="form-control" name="email" id="email"  placeholder="Enter your Email" required/>
+                  <input type="email" class="form-control" name="email" id="email"  placeholder="Enter your Email" required/>
                 </div>              
             </div>
 
