some minor changes

--- a/finish.html
+++ b/finish.html
@@ -40,19 +40,19 @@
 
 <!-- HOME PAGE BANNER -->
 <div class="jumbotron text-center">
-  <h1 class="display-3">Good job finishing today's workout!</h1>
-  <h2 class="lead">
-    You finished exercise:
-  </h2>
+  <h1 class="display-3">Good job!</h1>
+  <h1 class="lead">
+    You finished exercises:
+  </h1>
 
   <div>
     <ul>
-      <li>walk</li>
-      <li>squats</li>
+      <li style="color:green;font-size:30px">walk</li>
+      <li style="color:green;font-size:30px">squats</li>
     </ul>
   </div>
 
-  <h2>Calorie spent: 200</h2>
+  <h1 class="lead">Calorie spent: 200</h1>
 </div>
 
 <div class="container">             
