Made Modal text bigger

--- a/work.html
+++ b/work.html
@@ -111,13 +111,13 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+        <h5 class="modal-title" id="exampleModalLabel" style="font-size:xx-large; font-weight:bold;">New message</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
          
         </button>
       </div>
       <div class="modal-body">
-        <p id="modal-text">Modal body text goes here.<p>
+        <p id="modal-text" style="font-size:x-large">Modal body text goes here.<p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
