added space at bottom of page

--- a/work.html
+++ b/work.html
@@ -130,8 +130,9 @@
   </div>
 </div>
 <div>
-  <button class="btn btn-primary btn-lg btn-block login-button" href="./finish.html" > Finish Workout </button>
+  <button class="btn btn-success btn-lg btn-block login-button" href="./finish.html" > Finish Workout </button>
 </div>
+<br>
 <script type="text/javascript">
 //add this into a js file later
 $('#exerciseInfoModal').on('show.bs.modal', function (event) {
