Made text bigger

--- a/finish.html
+++ b/finish.html
@@ -47,12 +47,15 @@
 
   <div>
     <ul>
-      <li style="color:green;font-size:30px">walk</li>
-      <li style="color:green;font-size:30px">squats</li>
+      <li style="color:green;font-size:x-large;">Walk</li>
+      <li style="color:green;font-size:x-large;">Squats</li>
     </ul>
   </div>
 
   <h1 class="lead">Calorie spent: 200</h1>
+  <p class="lead">
+    <a class="btn btn-success btn-lg" href="./index.html" role="button">Return Home</a>
+  </p>
 </div>
 
 <div class="container">             
