--- a/work.html
+++ b/work.html
@@ -130,7 +130,7 @@
   </div>
 </div>
 <div>
-  <button class="btn btn-success btn-lg btn-block login-button" href="./finish.html" > Finish Workout </button>
+  <button class="btn btn-success btn-lg btn-block" href="./finish.html" > Finish Workout </button>
 </div>
 <br>
 <script type="text/javascript">
