fixed buttons and made text more readable

--- a/finish.html
+++ b/finish.html
@@ -41,16 +41,17 @@
 <!-- HOME PAGE BANNER -->
 <div class="jumbotron text-center">
   <h1 class="display-3">Good job!</h1>
-  <h1 class="lead">
+  <h1 class="display-4">
     You finished exercises:
   </h1>
 
   <div>
     <ul>
-      <li style="color:green;font-size:x-large;">Walk</li>
-      <li style="color:green;font-size:x-large;">Squats</li>
+      <li style="color:green" class="display-4">Walk</li>
+      <li style="color:green" class="display-4">Squats</li>
     </ul>
   </div>
+</div>
 
   <h1 class="lead">Calorie spent: 200</h1>
   <p class="lead">
