--- a/work.html
+++ b/work.html
@@ -130,7 +130,7 @@
   </div>
 </div>
 <div>
-  <button class="btn btn-success btn-lg btn-block" href="./finish.html" > Finish Workout </button>
+ <a class="btn btn-success btn-lg" href="./finish.html" role="button">Finish Workout</a>
 </div>
 <br>
 <script type="text/javascript">
