--- a/finish.html
+++ b/finish.html
@@ -46,12 +46,10 @@
   </h1>
 
   <div>
-    <ul>
-      <li style="color:green" class="display-4">Walk</li>
-      <li style="color:green" class="display-4">Squats</li>
-    </ul>
+      <p style="color:green" class="display-4">Walk</p>
+      <p style="color:green" class="display-4">Squats</p>
   </div>
-</div>
+
 
   <h1 class="lead">Calorie spent: 200</h1>
   <p class="lead">
