--- a/work.html
+++ b/work.html
@@ -130,7 +130,7 @@
   </div>
 </div>
 <div>
- <a class="btn btn-success btn-lg" href="./finish.html" role="button">Finish Workout</a>
+  <button class="btn btn-success btn-lg btn-block" href="./finish.html" > Finish Workout </button>
 </div>
 <br>
 <script type="text/javascript">
