--- a/finish.html
+++ b/finish.html
@@ -49,9 +49,7 @@
       <p style="color:green" class="display-4">Walk</p>
       <p style="color:green" class="display-4">Squats</p>
   </div>
-
-
-  <h1 class="lead">Calorie spent: 200</h1>
+  <h1 class="lead display-4">Calorie spent: 200</h1>
   <p class="lead">
     <a class="btn btn-success btn-lg" href="./index.html" role="button">Return Home</a>
   </p>
