--- a/finish.html
+++ b/finish.html
@@ -41,14 +41,9 @@
 <!-- HOME PAGE BANNER -->
 <div class="jumbotron text-center">
   <h1 class="display-3">Good job!</h1>
-  <h1 class="display-4">
-    You finished exercises:
-  </h1>
-
-  <div>
-      <p style="color:green" class="display-4">Walk</p>
-      <p style="color:green" class="display-4">Squats</p>
-  </div>
+  <h1 class="display-4" >You finished exercises:</h1>
+  <h1 class="display-4" style="color:green">Walk</h1>
+  <h1 class="display-4" style="color:green">Squats</h1>
   <h1 class="lead display-4">Calorie spent: 200</h1>
   <p class="lead">
     <a class="btn btn-success btn-lg" href="./index.html" role="button">Return Home</a>
