Changed 'spent' to 'burned'

--- a/finish.html
+++ b/finish.html
@@ -44,7 +44,7 @@
   <h1 class="display-4" >You finished exercises:</h1>
   <h1 class="display-4" style="color:green">Walk</h1>
   <h1 class="display-4" style="color:green">Squats</h1>
-  <h1 class="lead display-4">Calorie spent: 200</h1>
+  <h1 class="lead display-4">Calories burned: 200</h1>
   <p class="lead">
     <a class="btn btn-success btn-lg" href="./index.html" role="button">Return Home</a>
   </p>
