--- a/work.html
+++ b/work.html
@@ -81,7 +81,7 @@
   <div class="row">
     
     <div class="col-sm-3">
-          <img src="./img/Squat2" class="img-rounded" alt="Lights" style="width:75%">
+          <img src="./img/Squat2.png" class="img-rounded" alt="Lights" style="width:75%">
           <div class=" btn btn-info" data-toggle="modal" data-target="#exerciseInfoModal" data-exercise="Squat">
             <p>Info</p>
           </div>
