fixed squat animation

--- a/work.html
+++ b/work.html
@@ -177,6 +177,7 @@ function counter() {
     $("#squat").attr("disabled", true);
     document.getElementById("numCount").innerHTML = "10 left";
     var timeleft = 10;
+    var imgNum = 0;
     var downloadTimer = setInterval(function(){
     timeleft--;
     document.getElementById("numCount").textContent = timeleft + " left";
