Add custom walking picture

--- a/work.html
+++ b/work.html
@@ -52,7 +52,7 @@
   <div class="row">
     
     <div class="col-sm-3">
-          <img src="./img/walk.jpg" class="img-rounded" alt="Lights" style="width:75%">
+          <img src="./img/Walk.jpg" class="img-rounded" alt="Lights" style="width:75%">
           <div class=" btn btn-info" data-toggle="modal" data-target="#exerciseInfoModal" data-exercise="Walk">
             <p>Info</p>
           </div>
