--- a/finish.html
+++ b/finish.html
@@ -50,12 +50,13 @@
   </p>
 </div>
 
+<!-- NO NEXT/BACK FOR NOW
 <div class="container">             
   <ul class="pager">
     <li class="previous"><a href="./work.html">Previous</a></li>
     <li class="next"><a href="./index.html">Next</a></li>
   </ul>
-</div>
+</div> -->
 
 </body>
 </html>
