testing post request

--- a/signup.html
+++ b/signup.html
@@ -19,7 +19,7 @@
           </div>
         </div> 
         <div>
-          <form method="get" action="/">
+          <form method="post" action="/">
             
             <div class="form-group">
               <label for="name">Name</label>
