--- a/work.html
+++ b/work.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src = "./js/script.js">
 </head>
 
 
@@ -134,6 +135,7 @@
     <button class="btn btn-primary btn-lg btn-block login-button" onclick="location.href='./finish.html';"> Finish Workout </button>
 </div>
 <br>
+<!--
 <script type="text/javascript">
 
 
@@ -203,6 +205,6 @@ function counter() {
     },1000);
 }
 </script>
-
+-->
 </body>
 </html>
