--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
                   </div>
               </div> 
         <div>
-          <form method="post" action="#">
+          <form method="get" action="#">
            
 
             <div class="form-group">
@@ -38,7 +38,7 @@
             </div>
 
             <div class="form-group ">
-              <button type="button" class="btn btn-primary btn-lg btn-block login-button"  onclick="location.href = 'index.html'">Login</button>
+              <button type="button" class="btn btn-primary btn-lg btn-block login-button"  onclick="checkLogin()">Login</button>
             </div>
             <label>Don't have an account yet?</label>
             <div>
