--- a/settings.html
+++ b/settings.html
@@ -2,10 +2,7 @@
 <html lang="en">
     <head> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    <link rel="import" href="components.html">
 <title>Account Settings</title>
   </head>
 
@@ -26,13 +23,13 @@
             </div>
            
             <label class="btn btn-info">
-              <input type="checkbox" autocomplete="off"> Knee
+              <input type="checkbox" id="knee" autocomplete="off"> Knee
             </label>
             <label class="btn btn-info">
-              <input type="checkbox" autocomplete="off"> Back
+              <input type="checkbox" id="back" autocomplete="off"> Back
             </label>
             <label class="btn btn-info">
-              <input type="checkbox" autocomplete="off"> Wrist
+              <input type="checkbox" id ="wrist" autocomplete="off"> Wrist
             </label>
 
 
