Can create user accounts

--- a/signup.html
+++ b/signup.html
@@ -51,18 +51,18 @@
             </div>
            
         <label class="btn btn-info">
-          <input type="checkbox" autocomplete="off"> Knee
+          <input type="checkbox" id="knee" autocomplete="off"> Knee
         </label>
         <label class="btn btn-info">
-          <input type="checkbox" autocomplete="off"> Back
+          <input type="checkbox" id="back" autocomplete="off"> Back
         </label>
         <label class="btn btn-info">
-          <input type="checkbox" autocomplete="off"> Wrist
+          <input type="checkbox" id="wrist" autocomplete="off"> Wrist
         </label>
 
 
             <div>
-              <input type="submit" class="btn btn-primary btn-lg btn-block login-button" value="Sign Up">
+              <button onclick="createAccount()" class="btn btn-primary btn-lg btn-block login-button" value="Sign Up"></button>
             </div>
             <label>Already have an account?</label>
             <div>
