--- a/signup.html
+++ b/signup.html
@@ -16,7 +16,7 @@
           </div>
         </div> 
         <div>
-          <form method="post" action="/">
+          <form method="get" action="javascript:checkAccount();">
             
             <div class="form-group">
               <label for="name">Name</label>
@@ -62,7 +62,7 @@
 
 
             <div>
-              <button onclick="createAccount()" class="btn btn-primary btn-lg btn-block login-button" value="Sign Up"></button>
+              <input type="submit" class="btn btn-primary btn-lg btn-block login-button" value="Sign Up">
             </div>
             <label>Already have an account?</label>
             <div>
