--- a/signup.html
+++ b/signup.html
@@ -69,6 +69,22 @@
                     <a href="login.html">Login</a>
             </div>
           </form>
+
+          <script type="text/javascript">function createAccount() {
+  var email = document.getElementById("email").value;
+  var name = document.getElementById("name").value;
+  var password = document.getElementById("password").value;
+  var age = document.getElementById("age").value;
+  var knee = document.getElementById("knee").checked;
+  var back = document.getElementById("back").checked;
+  var wrist = document.getElementById("wrist").checked;
+
+
+  var jsonObj = JSON.stringify({'password': password, "name": name, "age":age, 'knee':knee, 'back':back,'wrist':wrist});
+  localStorage.setItem(email, jsonObj);
+  location = "./";
+
+}</script>
         </div>
       </div>
     </div>
