fixed account creation

--- a/signup.html
+++ b/signup.html
@@ -16,7 +16,7 @@
           </div>
         </div> 
         <div>
-          <form method="get" action="javascript:checkAccount();">
+          <form method="get" action="javascript:createAccount();">
             
             <div class="form-group">
               <label for="name">Name</label>
@@ -71,18 +71,7 @@
           </form>
 
           <script type="text/javascript">
-          function createAccount() {
-  var email = document.getElementById("email").value;
-  var name = document.getElementById("name").value;
-  var password = document.getElementById("password").value;
-  var age = document.getElementById("age").value;
-  var knee = document.getElementById("knee").checked;
-  var back = document.getElementById("back").checked;
-  var wrist = document.getElementById("wrist").checked;
-
-
-
-}
+          
 </script>
         </div>
       </div>
