fixed account settings

--- a/settings.html
+++ b/settings.html
@@ -3,6 +3,7 @@
     <head> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="import" href="components.html">
+    <script src="./js/settings.js"></script>
 <title>Account Settings</title>
   </head>
 
