--- a/work.html
+++ b/work.html
@@ -65,7 +65,7 @@
     <div class="col-sm-3">
       <p text-align="center">
         <br/>
-        <button type="button" id="walk" onclick="timer()" class="btn btn-primary btn-circle btn-lg">
+        <button type="button" id="walk" onclick="timer(this)" class="btn btn-primary btn-circle btn-lg">
           <h2 id="timeCount">Start Now<br /></h2></button>
       </p>
     </div>
@@ -94,7 +94,7 @@
     <div class="col-sm-3">
       <p class="lead">
         <br />
-        <button type="button" id="squat" onclick="counter()" class="btn btn-primary btn-circle btn-lg">
+        <button type="button" id="squat" onclick="counter(this)" class="btn btn-primary btn-circle btn-lg">
           <h2 id="numCount">Start Now<br/></h2></button>
       </p>
     </div>
@@ -123,7 +123,7 @@
     <div class="col-sm-3">
       <p class="lead">
         <br />
-        <button type="button" id="squat" onclick="counter()" class="btn btn-primary btn-circle btn-lg">
+        <button type="button" id="squat" onclick="counter(this)" class="btn btn-primary btn-circle btn-lg">
           <h2 id="numCount">Start Now<br/></h2></button>
       </p>
     </div>
