--- a/work.html
+++ b/work.html
@@ -123,7 +123,7 @@
     <div class="col-sm-3">
       <p class="lead">
         <br />
-        <button type="button" id="squat" onclick="counter(this)" class="btn btn-primary btn-circle btn-lg">
+        <button type="button" id="pushup" onclick="counter(this)" class="btn btn-primary btn-circle btn-lg">
           <h2 id="numCount">Start Now<br/></h2></button>
       </p>
     </div>
