--- a/work.html
+++ b/work.html
@@ -51,7 +51,7 @@
   <div class="row">
     
     <div class="col-sm-3">
-          <img id="exerise-img1"src="./img/Walk.png" class="img-rounded" alt="Lights" style="width:75%">
+          <img id="exerise-img1" src="./img/Walk.png" class="img-rounded" alt="Lights" style="width:75%">
           <div class=" btn btn-info" id="exercise-info1" data-toggle="modal" data-target="#exerciseInfoModal" data-exercise="Walk">
             <p>Info</p>
           </div>
@@ -109,7 +109,7 @@
   <div class="row">
     
     <div class="col-sm-3">
-          <img id="exerise-img3" src="./img/Squat2.png" class="img-rounded" alt="Lights" style="width:75%">
+          <img id="exerise-img3" src="./img/pushup.jpg" class="img-rounded" alt="Lights" style="width:75%">
           <div class=" btn btn-info" id="exercise-info1" data-toggle="modal" data-target="#exerciseInfoModal" data-exercise="Pushup">
             <p>Info</p>
           </div>
