--- a/finish.html
+++ b/finish.html
@@ -40,9 +40,9 @@
 <div class="jumbotron text-center">
   <h1 class="display-3">Good job!</h1>
   <h1 class="display-4" >You finished exercises:</h1>
-  <h1 class="display-4" id="excercise-done1" style="color:green">Walk</h1>
-  <h1 class="display-4" id="excercise-done2" style="color:green">Squats</h1>
-  <h1 class="display-4" id="excercise-done3" style="color:green">Pushups</h1>
+  <h1 class="display-4" id="exercise-done1" style="color:green">Walk</h1>
+  <h1 class="display-4" id="exercise-done2" style="color:green">Squats</h1>
+  <h1 class="display-4" id="exercise-done3" style="color:green">Pushups</h1>
   <h1 class="lead display-4">Calories burned: 200</h1>
   <p class="lead">
     <a class="btn btn-success btn-lg" href="./index.html" role="button">Return Home</a>
