--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
   </thead>
   <tbody>
     <tr>
-      <td class="yoga">Yoga</td>
+      <td>Wall Push Ups</td>
       <td>Walking</td>
-      <td class="yoga">Yoga</td>
+      <td>Wall Push Ups</td>
       <td>Walking</td>
-      <td class="yoga">Yoga</td>
+      <td>Wall Push Ups</td>
       <td>Walking</td>
       <td>No Workout Today!</td>
     </tr>
