--- a/finish.html
+++ b/finish.html
@@ -10,6 +10,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
  <link rel="import" href="components.html">
+ <script src="./js/finish.js"></script>
 </head>
 
 <body>
