--- a/index.html
+++ b/index.html
@@ -75,21 +75,30 @@
   </thead>
   <tbody>
     <tr>
-      <td>Wall Push Ups</td>
-      <td>Walking</td>
-      <td>Wall Push Ups</td>
-      <td>Walking</td>
-      <td>Wall Push Ups</td>
-      <td>Walking</td>
+      <td class="wrist">Wall Push Ups</td>
+      <td class="knee">Walking</td>
+      <td class="wrist">Wall Push Ups</td>
+      <td class="knee">Walking</td>
+      <td class="wrist">Wall Push Ups</td>
+      <td class="knee">Walking</td>
       <td>No Workout Today!</td>
     </tr>
     <tr>
       <td></td>
-      <td class="squats">Squats</td>
+      <td class="back">Squats</td>
       <td></td>
+      <td class="back">Squats</td>
       <td></td>
-      <td class="squats">Squats</td>
+      <td class="back">Squats</td>
       <td></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td class="back">Squats</td>
+      <td></td>
+      <td class="wrist">Wall Push Ups</td>
+      <td></td>
+      <td class="back">Squats</td>
       <td></td>
     </tr>
   </tbody>
