--- a/signup.html
+++ b/signup.html
@@ -17,7 +17,7 @@
         </div> 
         
         <!-- RETURNING USER -->
-        <div class="text-center"> 
+        <div class="jumbotron text-center"> 
           <h3>Already have an account?</h3>
           <a class="btn btn-success btn-lg btn-block" href="./login.html" role="button">I Already Have an Account</a>
         </div>
