Final touches on signup.html

--- a/signup.html
+++ b/signup.html
@@ -19,7 +19,7 @@
         <!-- RETURNING USER -->
         <div class="jumbotron text-center"> 
           <h3>Already have an account?</h3>
-          <a class="btn btn-success btn-lg btn-block" href="./login.html" role="button">I Already Have an Account</a>
+          <a class="btn btn-success btn-lg" href="./login.html" role="button">Yes, I do!</a>
         </div>
 
         <!-- SIGNUP FORM-->
