Set default text for exercise 1 popover

--- a/work.html
+++ b/work.html
@@ -53,8 +53,10 @@
       <!-- EXERCISE INFO -->
       <div class="col-sm-3">
             <img id="exercise-img1" src="./img/Walk.png" class="img-rounded" alt="Lights" style="width:75%">
-            <button id="exercise-info1" type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="top" data-content="Sample text for workout directions (coming soon!).">
-              Click to toggle directions!
+            <button id="exercise-info1" type="button" class="btn btn-warning" data-container="body" 
+                data-toggle="popover" data-placement="top" 
+                data-content="Walk at a brisk pace while pumping your arms.">
+              Click to toggle info
             </button>
             <!-- modal version 
             <div class=" btn btn-info" id="modal-text" data-toggle="modal" data-target="#exerciseInfoModal" data-exercise="Walk">
