Set defaults for all exercise popovers

--- a/work.html
+++ b/work.html
@@ -89,8 +89,13 @@
       
       <div class="col-sm-3">
             <img id="exercise-img2" src="./img/Squat2.png" class="img-rounded" alt="Lights" style="width:75%">
-            <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="top" data-content="Sample text for workout directions (coming soon!).">
-              Click to toggle directions!
+            <button id="exercise-info2" type="button" class="btn btn-warning" data-container="body"
+            data-toggle="popover" data-placement="top"
+            data-content="Stand with your arms straight out and with your feet at about shoulder width apart. "+
+                        "Keeping your back straight, bend your knees as if you were sitting. " +
+                        "Rise back up to a standing position. " +
+                        "Repeat this 10 times.">
+              Click to toggle info
             </button>
             <!-- modal version 
             <div class=" btn btn-info" id="modal-text" data-toggle="modal" data-target="#exerciseInfoModal" data-exercise="Squat">
@@ -123,8 +128,12 @@
       
       <div class="col-sm-3">
             <img id="exercise-img3" src="./img/pushup.jpg" class="img-rounded" alt="Lights" style="width:75%">
-            <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="top" data-content="Sample text for workout directions (coming soon!).">
-              Click to toggle directions!
+            <button id="exercise-info3" type="button" class="btn btn-warning" data-container="body" 
+            data-toggle="popover" data-placement="top" 
+            data-content="Stand an arms length away from a sturdy wall. Keeping your feet planted,"+
+                          " bend your arms so your body moves closer to the wall, then push against"+
+                          " the wall so you are standing up straight again. Repeat this 10 times.">
+              Click to toggle info 
             </button>
             <!-- modal version 
             <div class=" btn btn-info" id="modal-text" data-toggle="modal" data-target="#exerciseInfoModal" data-exercise="Pushup">
