remove second button

--- a/work.html
+++ b/work.html
@@ -56,15 +56,10 @@
       <!-- EXERCISE INFO -->
       <div class="col-sm-3">
             <img id="exercise-img1" src="./img/Walk.png" class="img-rounded" alt="Lights" style="width:75%">
-            <button id="popover-walk" type="button" class="btn btn-warning" data-container="body" 
+            <button id="exercise-info1" type="button" class="btn btn-warning" data-container="body" 
                 data-toggle="popover" data-placement="top" 
                 data-content="Walk at a brisk pace while pumping your arms.">
               Click to toggle walk info
-            </button>
-            <button id="popover-calfraise" type="button" class="btn btn-warning" data-container="body" 
-                data-toggle="popover" data-placement="top" 
-                data-content="Starting with your feet planted, raise your heels, hold, and lower them.">
-              Click to toggle calf raise info
             </button>
             <!-- modal version 
             <div class=" btn btn-info" id="modal-text" data-toggle="modal" data-target="#exerciseInfoModal" data-exercise="Walk">
