Tooltip changes with modification

--- a/work.html
+++ b/work.html
@@ -61,6 +61,13 @@
                 data-content="Walk at a brisk pace while pumping your arms.">
               Click to toggle walk info
             </button>
+
+            <button id="exercise-info1-mod" type="button" class="btn btn-warning" data-container="body" 
+                data-toggle="popover" data-placement="top" 
+                data-content="Put your back against a wall. Lower your body by bending" +
+                             " your knees as if you were sitting in a chair. Hold this position for 30 seconds.">
+              Click to toggle walk info
+            </button>
             <!-- modal version 
             <div class=" btn btn-info" id="modal-text" data-toggle="modal" data-target="#exerciseInfoModal" data-exercise="Walk">
               <p>Info</p>
@@ -100,6 +107,13 @@
                         "Repeat this 10 times.">
               Click to toggle info
             </button>
+            <button id="exercise-info2-mod" type="button" class="btn btn-warning" data-container="body"
+            data-toggle="popover" data-placement="top"
+            data-content="Stand with your feet flat on the ground. lift your heels until you are" +
+                         " are your tip-toes and hold for one second and then return to a normal" +
+                         " standing position. Repeat this 10 times.">
+              Click to toggle info
+            </button>
             <!-- modal version 
             <div class=" btn btn-info" id="modal-text" data-toggle="modal" data-target="#exerciseInfoModal" data-exercise="Squat">
               <p>Info</p>
@@ -131,11 +145,23 @@
       
       <div class="col-sm-3">
             <img id="exercise-img3" src="./img/pushup.jpg" class="img-rounded" alt="Lights" style="width:75%">
+            <!--default-->
             <button id="exercise-info3" type="button" class="btn btn-warning" data-container="body" 
             data-toggle="popover" data-placement="top" 
             data-content="Stand an arms length away from a sturdy wall. Keeping your feet planted,"+
                           " bend your arms so your body moves closer to the wall, then push against"+
                           " the wall so you are standing up straight again. Repeat this 10 times.">
+              Click to toggle info 
+            </button>
+
+            <!--with modification-->
+            <button id="exercise-info3-mod" type="button" class="btn btn-warning" data-container="body" 
+            data-toggle="popover" data-placement="top" 
+            data-content="Lay flat on your back with your knees bent."+
+                        " Put your arms across your chest and lift your" +
+                        " upper body until your elbows touch your knees"+
+                        " and then lay back so that your back is on the"+
+                        " ground again. Repeat this 10 times.">
               Click to toggle info 
             </button>
             <!-- modal version 
