--- a/work.html
+++ b/work.html
@@ -65,9 +65,10 @@
 
             <button id="exercise-info1-mod" type="button" class="btn btn-warning" data-container="body" 
                 data-toggle="popover" data-placement="top" 
-                data-content="Put your back against a wall. Lower your body by bending" +
-                             " your knees as if you were sitting in a chair. Hold this position for 30 seconds.">
-              Click to toggle walk info
+                data-content="Stand with your feet flat on the ground. lift your heels until you are
+                          are your tip-toes and hold for one second and then return to a normal
+                          standing position. Repeat this 10 times.">
+              Click to toggle info
             </button>
             <!-- modal version 
             <div class=" btn btn-info" id="modal-text" data-toggle="modal" data-target="#exerciseInfoModal" data-exercise="Walk">
@@ -110,9 +111,8 @@
             </button>
             <button id="exercise-info2-mod" type="button" class="btn btn-warning" data-container="body"
             data-toggle="popover" data-placement="top"
-            data-content="Stand with your feet flat on the ground. lift your heels until you are" +
-                         " are your tip-toes and hold for one second and then return to a normal" +
-                         " standing position. Repeat this 10 times.">
+            data-content="Put your back against a wall. Lower your body by bending
+                 your knees as if you were sitting in a chair. Hold this position for 30 seconds.">
               Click to toggle info
             </button>
             <!-- modal version 
@@ -158,11 +158,11 @@
             <!--with modification-->
             <button id="exercise-info3-mod" type="button" class="btn btn-warning" data-container="body" 
             data-toggle="popover" data-placement="top" 
-            data-content="Lay flat on your back with your knees bent."+
-                        " Put your arms across your chest and lift your" +
-                        " upper body until your elbows touch your knees"+
-                        " and then lay back so that your back is on the"+
-                        " ground again. Repeat this 10 times.">
+            data-content="Lay flat on your back with your knees bent.
+                         Put your arms across your chest and lift your
+                         upper body until your elbows touch your knees
+                         and then lay back so that your back is on the
+                         ground again. Repeat this 10 times.">
               Click to toggle info 
             </button>
             <!-- modal version 
