Switch to column view in workout2.html

--- a/work2.html
+++ b/work2.html
@@ -50,6 +50,7 @@
 </div>
 
 <!-- exercise 1 -->
+<div class="container">
 <div class="container text center" id="exer1">
     <div class="col">
      
@@ -169,7 +170,7 @@
       
     </div>
 </div>
-
+</div>
 <button class="btn btn-primary btn-lg btn-block login-button" onclick="location.href='./finish.html';"> Finish Workout </button>
 </div>
 <br>
